# cowsay.rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
src/: main.rs
