[package]
name = "cowsay"
version = "0.3.0"
authors = ["Prabir Shrestha <mail@prabir.me>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "cowsay is a program that generates ASCII art pictures of a cow with a message."
repository = "https://github.com/prabirshrestha/cowsay.rs"

[dependencies]
structopt = "0.3.21"
colored = "2.0.0"
